--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
   <div class="container_img">
-    <img class="chanel" src="https://github.com/RanMd/Card-Preview/blob/gh-pages/images/image-product-desktop.jpg">
+    <img class="chanel" src="/Card-Preview/blob/gh-pages/images/image-product-desktop.jpg">
   </div>
   <div class="cont-text">
     <p>P E R F U M E</p>
