--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
   <div class="container_img">
-    <img class="chanel" src="https://github.com/RanMd/Card-Preview/blob/64afcedb1f2db10510f298854beb17579549936b/images/image-product-desktop.jpg" alt="Frasco del perfume Chanel">
+    <img class="chanel" src="https://github.com/RanMd/Card-Preview/blob/64afcedb1f2db10510f298854beb17579549936b/images/image-product-desktop.jpg" alt="Botella del perfume Chanel">
   </div>
   <div class="cont-text">
     <p>P E R F U M E</p>
