--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
     <p class="rebaja">$149.99 &nbsp <del>$169.9</del></p>
     <br>
-    <button> <img src="/images/icon-cart.svg"> &nbsp Add to Cart </button>
+    <button> <img src="./images/icon-cart.svg"> &nbsp Add to Cart </button>
   </div>
 </div>
   
