--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">RanMd</a>
+    Coded by <a href="https://github.com/RanMd">RanMd</a>
   </div>
 </body>
 </html>
