--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+  <main>
 <div class="container">
   <div class="container_img">
     <img class="chanel" src="./images/image-product-desktop.jpg" alt="Botella del perfume Chanel">
@@ -29,10 +30,12 @@
     <button> <img src="./images/icon-cart.svg"> &nbsp Add to Cart </button>
   </div>
 </div>
-  
+  </main>
+  <footer>
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/RanMd">RanMd</a>
-  </div>
+ </div>
+  </footer>
 </body>
 </html>
